...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please sign in to continue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aY5-Im-Uxr">
                                <rect key="frame" x="104" y="148" width="206" height="21.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QLd-6O-nIF">
                                <rect key="frame" x="32" y="209.5" width="350" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="hXY-tQ-KeD"/>
                                    <constraint firstAttribute="height" constant="60" id="hZG-zh-MT6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    </mask>
                                </variation>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Whx-vp-u9c"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FfV-i8-rnp">
                                <rect key="frame" x="32" y="297.5" width="350" height="60"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="h7x-yD-m2b"/>
                                </connections>
...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="T0H-FS-47V">
                                <rect key="frame" x="57" y="397.5" width="300" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9c-zf-GWg">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="60"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" red="0.82352941180000006" green="0.20000000000000001" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                <real key="value" value="0.5"/>
                                            </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="NyA-dJ-UG3" firstAttribute="leading" secondItem="aU8-jd-SOg" secondAttribute="leading" id="ucT-MN-k55"/>
                            <constraint firstItem="aU8-jd-SOg" firstAttribute="trailing" secondItem="rwv-S4-ak1" secondAttribute="trailing" id="zoM-JN-Jrk"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="aU8-jd-SOg"/>
                    </view>
                    <navigationItem key="navigationItem" id="9b9-HP-1zN">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="rDx-yX-4Dr">
                            <color key="tintColor" red="0.82352941180000006" green="0.20000000000000001" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="logoutButtonAction:" destination="f5s-93-Z3b" id="PQJ-y8-0vG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
