...
        }
    }
    
    func loadDefaultUserData() {
        let entity = NSEntityDescription.insertNewObject(forEntityName: "User", into: manageObjectContext!)
        entity.setValue("123", forKey: Constants.UserKeys.id)
        entity.setValue("admin", forKey: Constants.UserKeys.name)
        entity.setValue("password", forKey: Constants.UserKeys.password)
        entity.setValue("test@gmail.com", forKey: Constants.UserKeys.email)
        entity.setValue(Date(), forKey: Constants.UserKeys.birthday)
        
        do {
            try manageObjectContext?.save()
...
